--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h2>Gyakorlás</h2>
     <p>Ahahahahahahahahaha</p>
-    <p>ez rossz szöveg</p>
+    <p>ez jó szöveg</p>
 </body>
 </html>
